<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.portfolio.page.WelcomePage">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.PortfolioMobile.CardPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="5dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="5dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.PortfolioMobile.Bend.50">

        <TextView
            style="@style/Widget.PortfolioMobile.TextViewOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.PortfolioMobile.CardPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:contentPaddingBottom="5dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="5dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.PortfolioMobile.Bend.50">

        <TextView
            style="@style/Widget.PortfolioMobile.TextViewOnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_occupation"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.PortfolioMobile.CardPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="5dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="5dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.PortfolioMobile.Bend.50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gmail"
                style="@style/Widget.PortfolioMobile.ImageViewOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/gmail"
                android:src="@drawable/ic_gmail" />

            <ImageView
                android:id="@+id/github"
                style="@style/Widget.PortfolioMobile.ImageViewOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/github"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/linkedin"
                style="@style/Widget.PortfolioMobile.ImageViewOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/greet"
        android:textAlignment="center" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/resume"
        android:textAlignment="center" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/likes_goals"
        android:textAlignment="center" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />
</LinearLayout>