<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.projectdetail.ProjectDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="?attr/background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/Theme.PortfolioMobile.CollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/background_gradient_black" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:collapseIcon="@drawable/ic_error"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/ownership"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/ownership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Project ownership" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/access_links"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <LinearLayout
                android:id="@+id/access_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/duration"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="1 Month. Started August 2021. Finished on September 2021." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="An android app that showcases my projects and portfolio's about section." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/features"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <LinearLayout
                android:id="@+id/features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/technologies"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/colorPrimary" />

            <LinearLayout
                android:id="@+id/technologies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>