<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000"
    android:orientation="vertical"
    tools:context=".ui.main.MainSwipeOverlay">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/swipe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:importantForAccessibility="2"
        android:src="@drawable/ic_swipe"
        app:layout_constraintBottom_toBottomOf="@id/center_offset"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/swipe_text"
        style="@style/Widget.PortfolioMobile.TextView.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/navigation_tip_1"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/swipe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/got_it"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/got_it"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/swipe_text" />

    <TextView
        android:id="@+id/navigation_bar_text"
        style="@style/Widget.PortfolioMobile.TextView.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_tip_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/navigation_bar"
        app:layout_constraintTop_toTopOf="@id/navigation_bar" />

    <ImageView
        android:id="@+id/navigation_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:importantForAccessibility="2"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>